feature: Creacion de nuevo endpoint y ajuste de logicvca para eliminar auditorias  udistrital/sisifo_documentacion#627
